# argon2kt

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: android.yaml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lambdapioneer/argon2kt/app/: Adapters.kt  MainActivity.kt  SampleJavaClass.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-v23/: styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  publish.gradle
lib/src/androidTest/java/com/lambdapioneer/argon2kt/: Argon2KtBenchmarkTest.kt  Argon2KtTest.kt  Argon2KtUtilsTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/lambdapioneer/argon2kt/: Argon2Error.kt  Argon2Kt.kt  Argon2KtUtils.kt  Utils.kt
lib/src/test/java/com/lambdapioneer/argon2kt/: Argon2ErrorTest.kt  Argon2KtBenchmarkUnitTest.kt  Argon2KtUtilsTest.kt  Argon2KtUtilsUnitTest.kt  UtilsTest.kt
scripts/: update_argon2_sources.sh
